[package]
name = "runjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
deno_ast = { version = "0.31.3", features = ["transpiling"] }
deno_core = "0.278.0"
once_cell = "1.19.0"
reqwest = "0.11.17"
tokio = { version = "1.28.0", features = ["full"] }
zstd = "0.13"

[build-dependencies]
deno_core = "0.278.0"
zstd = "0.13"
